fix: collapsing table rows

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -713,7 +713,7 @@ dl {
 
 // SF 424 A Budget Form
 .sf424a__row {
-  height: 1px;
+  height: fit-content;
   .sf424a__cell {
     height: inherit;
     &--row-headers {
